tests/neg/semantic_voidpp_to_intp_invalid.baa
// EXPECT: عدم تطابق نوع المؤشر

صحيح الرئيسية() {
    عدم** م = عدم.
    صحيح* س = م.
    إرجع ٠.
}
